--- a/www/index.html
+++ b/www/index.html
@@ -38,8 +38,29 @@
     <script src="app/app.js"></script>
     <script src="app/app.router.js"></script>
     <script src="app/app.controller.js"></script>
+    <script src="app/app.service.js"></script>
+    <script src="app/life.js"></script>
+    <script src="app/life.router.js"></script>
+    <script src="app/life.controller.js"></script>
+    <script src="app/near.js"></script>
+    <script src="app/near.router.js"></script>
+    <script src="app/near.controller.js"></script>
+    <script src="app/pick.js"></script>
+    <script src="app/pick.router.js"></script>
+    <script src="app/pick.controller.js"></script>
+    <script src="app/user.js"></script>
+    <script src="app/user.router.js"></script>
+    <script src="app/user.controller.js"></script>
+    <script src="app/cate.js"></script>
+    <script src="app/cate.router.js"></script>
+    <script src="app/cate.controller.js"></script>
+    <script src="app/mall.js"></script>
+    <script src="app/mall.router.js"></script>
+    <script src="app/mall.controller.js"></script>
+    <script src="app/root.js"></script>
+    <script src="app/root.controller.js"></script>
   </head>
-  <body ng-app="main">
+  <body ng-app="main" ng-controller="root.rootController">
     <ion-nav-view></ion-nav-view> 
   </body>
 </html>
