--- a/www/app/near.template.main.html
+++ b/www/app/near.template.main.html
@@ -3,6 +3,6 @@
   <ion-content>
     <h1>near-111111</h1>
     <h2>near-222222</h2>
-    <h3>near-333333</h3><a href="#/mall">商场</a>
+    <h3>near-333333</h3><a href="#/mall">商场</a><a href="#/productDetail/10000000/1000000000">商品</a>
   </ion-content>
 </ion-view>
