--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+     <script src="lib/underscore/underscore-min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/main.router.js"></script>
     <script src="app/intro.js"></script>
@@ -59,6 +60,9 @@
     <script src="app/mall.controller.js"></script>
     <script src="app/root.js"></script>
     <script src="app/root.controller.js"></script>
+    <script src="app/productDetail.js"></script>
+    <script src="app/productDetail.router.js"></script>
+    <script src="app/productDetail.controller.js"></script>
   </head>
   <body ng-app="main" ng-controller="root.rootController">
     <ion-nav-view></ion-nav-view> 
